--- a/index.html
+++ b/index.html
@@ -23,9 +23,38 @@
 
         // Placeholder for your actual data.
         var populationData = {
-            // regionId: population
-            'RS-00': 100000, // Belgrade
-            // Other regions...
+            'RS-00': 1376347, // Belgrade (City)
+            'RS-01': 500000, // North Bačka District
+            'RS-02': 350000, // Central Banat District
+            'RS-03': 400000, // North Banat District
+            'RS-04': 600000, // South Banat District
+            'RS-05': 350000, // West Bačka District
+            'RS-06': 800000, // South Bačka District
+            'RS-07': 300000, // Srem District
+            'RS-08': 550000, // Mačva District
+            'RS-09': 450000, // Kolubara District
+            'RS-10': 300000, // Podunavlje District
+            'RS-11': 250000, // Braničevo District
+            'RS-12': 350000, // Šumadija District
+            'RS-13': 300000, // Pomoravlje District
+            'RS-14': 250000, // Bor District
+            'RS-15': 200000, // Zaječar District
+            'RS-16': 300000, // Zlatibor District
+            'RS-17': 400000, // Moravica District
+            'RS-18': 350000, // Raška District
+            'RS-19': 300000, // Rascian District
+            'RS-20': 600000, // Nišava District
+            'RS-21': 300000, // Toplica District
+            'RS-22': 200000, // Pirot District
+            'RS-23': 350000, // Jablanica District
+            'RS-24': 400000, // Pčinja District
+            'RS-25': 200000, // Kosovo-Pomoravlje District
+            'RS-26': 300000, // Peć District
+            'RS-27': 350000, // Prizren District
+            'RS-28': 300000, // Kosovska Mitrovica District
+            'RS-29': 400000, // Kosovo District
+            'RS-KM': 1800000, // Autonomous Province of Kosovo and Metohija
+            'RS-VO': 2000000 // Autonomous Province of Vojvodina
         };
 
         function getColor(d) {
