--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
     <style>
         #mapid {
             height: 100vh;
@@ -22,47 +21,49 @@
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
 
-        // Load population data
-        d3.json('/population', function(error, populationData) {
-            if (error) throw error;
+        // Placeholder for your actual data.
+        var populationData = {
+            // regionId: population
+            'RS-00': 100000, // Belgrade
+            // Other regions...
+        };
 
-            var colorScale = d3.scaleQuantize()
-                .domain([d3.min(populationData, d => d.population), d3.max(populationData, d => d.population)])
-                .range(d3.schemeBlues[9]);
+        function getColor(d) {
+            return d > 1000000 ? '#800026' :
+                   d > 500000  ? '#BD0026' :
+                   d > 200000  ? '#E31A1C' :
+                   d > 100000  ? '#FC4E2A' :
+                   d > 50000   ? '#FD8D3C' :
+                   d > 20000   ? '#FEB24C' :
+                   d > 10000   ? '#FED976' :
+                                  '#FFEDA0';
+        }
 
-            // Load geojson data
-            d3.json('serbia', function(error, geojson) {
-                if (error) throw error;
+        function style(feature) {
+            return {
+                fillColor: getColor(populationData[feature.properties.ID_1]),
+                weight: 2,
+                opacity: 1,
+                color: 'white',
+                dashArray: '3',
+                fillOpacity: 0.7
+            };
+        }
 
-                // For each feature in the geojson, set the style based on population
-                geojson.features.forEach(function(feature) {
-                    var pop = populationData.find(d => d.id === feature.properties.ID_1);
-                    if (pop) {
-                        feature.properties.fillColor = colorScale(pop.population);
-                    }
-                });
-
-                // Add data to the map
-                L.geoJson(geojson, {
-                    style: function(feature) {
-                        return {
-                            fillColor: feature.properties.fillColor,
-                            weight: 2,
-                            opacity: 1,
-                            color: 'white',
-                            dashArray: '3',
-                            fillOpacity: 0.7
-                        };
-                    },
-                    onEachFeature: function (feature, layer) {
-                        var pop = populationData.find(d => d.id === feature.properties.ID_1);
-                        layer.bindPopup(
-                            'Region: ' + feature.properties.NAME_1 +
-                            '<br>Population: ' + (pop ? pop.population : 'No data')
-                        );
-                    }
-                }).addTo(map);
-            });
+        // Fetch the GeoJSON data
+        fetch('serbia.geojson')
+        .then(response => response.json())
+        .then(data => {
+            L.geoJson(data, {
+                style: style,
+                onEachFeature: function (feature, layer) {
+                    var population = populationData[feature.properties.ID_1];
+                    layer.bindPopup(
+                        'Region: ' + feature.properties.NAME_1 +
+                        '<br>Population: ' + population
+                    );
+                }
+            }).addTo(map);
         });
     </script>
 </body>
